src/components/navbar/Navbar.module.css
/* New Navbar */
.NavNew {
  position: fixed;
  display: initial;
  width: 100%;
  background: var(--sp-nav-bg);
  backdrop-filter: blur(4px);
  padding-bottom: 1px;
  z-index: 1;
}

.NavNew-inner-left {
  flex-grow: 1;
}

.dropdownCompactOuter {
  font-size: 14px;
  line-height: 1;
}

.dropdownCompact {
  display: inline-flex;
  padding: 4px 4px 2px 4px;
}

.mobileIcon {
  margin: 7px 2px 0 6px;
  height: 10px;
}

.dropdownBtn[data-headlessui-state="open"] .dropdownIcon, .dropdownCompact[data-headlessui-state="open"] .dropdownIcon {
  transform: rotateX(180deg);
}

.dropdownCompact .dropdownIcon {
  height: 100%;
  padding: 1px;
  vertical-align: top;
}

.gradientText {
  background: var(--sp-nav-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.NavMobile p, .dropdownCompact {
  font-size: 0.9375rem;
  line-height: 1;
}

@keyframes fade-in-out {
  0% {
    display: block;
    /* height: 0px; */
  }
  1% {
    opacity: 0;
  }
  3% {
    opacity: 1;
  }
  49% {
    opacity: 1;
  }
  52% {
    opacity: 0;
  }
  53% {
    display: none;
    /* height: 0px; */
  }
}

.NavFade, .NavFadeAlt {
  /* position: absolute; */
  top: 0;
  right: 0;
  display: block;
  white-space: nowrap;
  width: 100%;
  text-align: right;
}
.NavFade {
  opacity: 0;
  animation: 12s ease-in-out -1.50s infinite running fade-in-out;
}
.NavFadeAlt {
  opacity: 0;
  animation: 12s ease-in-out 4.50s infinite running fade-in-out;
  margin-top: -15px;
}

